--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </html>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="./scriptx.js"></script>
-  <script src="script.js"></script>
+ <script src="https://gist.githubusercontent.com/username/gist_id/raw/file_name"></script>
 
 
 </body>
