--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </html>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="./scriptx.js"></script>
- <script src="https://gist.githubusercontent.com/username/gist_id/raw/file_name"></script>
+  <script src="https://gist.github.com/mazzwell/d3bc3d2292d04ab774f5db01516d5cee.js"></script>
 
 
 </body>
